--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -5,11 +5,11 @@ add_executable(testQuadraticGenerator testQuadraticGenerator.cpp)
 pkg_config_use_dependency(testQuadraticGenerator Tasks)
 target_link_libraries(testQuadraticGenerator mc_rbdyn)
 
-FIND_PACKAGE(Boost REQUIRED COMPONENTS unit_test_framework timer)
-INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
-ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)
+find_package(Boost REQUIRED COMPONENTS unit_test_framework timer)
+include_directories(${Boost_INCLUDE_DIRS})
+add_definitions(-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)
 if(WIN32)
-  ADD_DEFINITIONS( -DBOOST_ALL_DYN_LINK )
+  add_definitions( -DBOOST_ALL_DYN_LINK )
 endif()
 
 MACRO(MC_RTC_TEST NAME)
@@ -18,7 +18,7 @@ MACRO(MC_RTC_TEST NAME)
   pkg_config_use_dependency(${NAME} jsoncpp)
   add_test(${NAME} ${NAME})
 	# Adding a project configuration file (for MSVC only)
-    GENERATE_MSVC_DOT_USER_FILE(${NAME})
+  generate_msvc_dot_user_file(${NAME})
 ENDMACRO()
 
 MC_RTC_TEST(testConfiguration mc_control)
@@ -28,7 +28,7 @@ pkg_config_use_dependency(test_controller_ticker mc_rbdyn_urdf_cpp)
 target_link_libraries(test_controller_ticker ${Boost_LIBRARIES} mc_control)
 pkg_config_use_dependency(test_controller_ticker Tasks)
 # Adding a project configuration file (for MSVC only)
-GENERATE_MSVC_DOT_USER_FILE(test_controller_ticker)
+generate_msvc_dot_user_file(test_controller_ticker)
 
 add_subdirectory(controllers)
 add_subdirectory(robots)
