Remove StanceConfig JSON reader from public API

--- a/src/mc_control/CMakeLists.txt
+++ b/src/mc_control/CMakeLists.txt
@@ -19,7 +19,7 @@ add_controller("com" "mc_com_controller.cpp"
   "mc_com_controller.h")
 add_controller("seq"
   "mc_seq_controller.cpp;mc_seq_steps.cpp;MCSeqPublisher.cpp"
-  "mc_seq_controller.h;mc_seq_actions.h;mc_seq_steps.h;MCSeqPublisher.h")
+  "mc_seq_controller.h;mc_seq_actions.h;mc_seq_steps.h;MCSeqPublisher.h;json/StanceConfig.h")
 add_controller("driving" "mc_driving_controller.cpp"
   "mc_driving_controller.h")
 add_controller("egress" "mc_egress_controller.cpp"
