--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,7 +62,7 @@ if(GEOS_CONFIG)
 else()
   if(WIN32)
     if(NOT DEFINED GEOS_PREFIX)
-      MESSAGE(WARNING "GEOS_PREFIX not defined, assuming it is equal to CMAKE_INSTALL_PREFIX")
+      message(WARNING "GEOS_PREFIX not defined, assuming it is equal to CMAKE_INSTALL_PREFIX")
       set(GEOS_PREFIX ${CMAKE_INSTALL_PREFIX})
     endif()
     set(GEOS_INCLUDE_DIR ${GEOS_PREFIX}/include)
@@ -71,7 +71,7 @@ else()
     include_directories(${GEOS_INCLUDE_DIR})
     link_directories(${GEOS_LIBRARY_DIR})
   else()
-    MESSAGE(SEND_ERROR "Could not find geos-config, missing dependency")
+    message(SEND_ERROR "Could not find geos-config, missing dependency")
   endif()
 endif()
 
@@ -86,11 +86,11 @@ macro(find_description_package desc_pkg)
         OUTPUT_VARIABLE "${DESC_PKG}_PATH"
         ERROR_QUIET OUTPUT_STRIP_TRAILING_WHITESPACE)
     else()
-      MESSAGE(WARNING "${DESC_PKG}_PATH is not defined and pkg-config failed to find ${desc_pkg}, the related robots' modules will not work properly. Check your system configuration or define ${DESC_PKG} to fix this issue.")
+      message(WARNING "${DESC_PKG}_PATH is not defined and pkg-config failed to find ${desc_pkg}, the related robots' modules will not work properly. Check your system configuration or define ${DESC_PKG} to fix this issue.")
     endif()
   endif()
   if(DEFINED ${DESC_PKG}_PATH)
-    MESSAGE(STATUS "Found ${desc_pkg}: ${${DESC_PKG}_PATH}")
+    message(STATUS "Found ${desc_pkg}: ${${DESC_PKG}_PATH}")
   endif()
 endmacro()
 
