--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -1,7 +1,7 @@
 set(LOG_ENABLED "false")
 set(LOG_POLICY "non-threaded")
 
-macro(CONTROLLER_TEST_COMMON NAME)
+macro(controller_test_common NAME)
   add_library(${NAME} SHARED ${NAME}.cpp)
   target_link_libraries(${NAME} ${Boost_LIBRARIES} mc_control)
   pkg_config_use_dependency(${NAME} jsoncpp)
@@ -14,33 +14,33 @@ macro(CONTROLLER_TEST_COMMON NAME)
   set(TEST_CONTROLLER_NAME ${NAME})
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf)
   # Adding a project configuration file (for MSVC only)
-  GENERATE_MSVC_DOT_USER_FILE(${NAME})
+  generate_msvc_dot_user_file(${NAME})
 endmacro()
 
-macro(CONTROLLER_TEST_CONSTRUCTION_FAILURE NAME)
-  CONTROLLER_TEST_COMMON(${NAME})
+macro(controller_test_construction_failure NAME)
+  controller_test_common(${NAME})
   add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=CONSTRUCTION_FAILURE ${NAME}/mc_rtc-${NAME}.conf)
 endmacro()
 
-macro(CONTROLLER_TEST_RUN NAME NRITER)
-  CONTROLLER_TEST_COMMON(${NAME})
+macro(controller_test_run NAME NRITER)
+  controller_test_common(${NAME})
   add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=RUN ${NAME}/mc_rtc-${NAME}.conf ${NRITER})
 endmacro()
 
-CONTROLLER_TEST_CONSTRUCTION_FAILURE(NotAController)
-CONTROLLER_TEST_CONSTRUCTION_FAILURE(NoDestroyController)
-CONTROLLER_TEST_CONSTRUCTION_FAILURE(NoCreateController)
+controller_test_construction_failure(NotAController)
+controller_test_construction_failure(NoDestroyController)
+controller_test_construction_failure(NoCreateController)
 # To run properly these tests require controller creation sandboxing
 # which is only enabled on Linux
 if(UNIX AND NOT APPLE)
-  CONTROLLER_TEST_CONSTRUCTION_FAILURE(UnresolvedSymbolController)
-  CONTROLLER_TEST_CONSTRUCTION_FAILURE(SegfaultController)
-  CONTROLLER_TEST_CONSTRUCTION_FAILURE(FPEController)
+  controller_test_construction_failure(UnresolvedSymbolController)
+  controller_test_construction_failure(SegfaultController)
+  controller_test_construction_failure(FPEController)
 endif()
-CONTROLLER_TEST_CONSTRUCTION_FAILURE(ThrowingController)
+controller_test_construction_failure(ThrowingController)
 
 set(LOG_ENABLED "true")
-CONTROLLER_TEST_RUN(TestPostureController 400)
+controller_test_run(TestPostureController 400)
 # These tests require a /tmp LogDirectory and symlinks to access the
 # *-latest.log symlink created by mc_rtc
 if(UNIX)
@@ -69,7 +69,7 @@ endif()
 
 set(LOG_POLICY "non-threaded")
 # mc_task test controllers
-CONTROLLER_TEST_RUN(TestCoMTaskController 4001)
-CONTROLLER_TEST_RUN(TestPositionTaskController 5000)
-CONTROLLER_TEST_RUN(TestOrientationTaskController 6001)
-CONTROLLER_TEST_RUN(TestEndEffectorTaskController 4001)
+controller_test_run(TestCoMTaskController 4001)
+controller_test_run(TestPositionTaskController 5000)
+controller_test_run(TestOrientationTaskController 6001)
+controller_test_run(TestEndEffectorTaskController 4001)
