--- a/tests/robots/CMakeLists.txt
+++ b/tests/robots/CMakeLists.txt
@@ -1,4 +1,4 @@
-macro(ROBOT_TEST_COMMON NAME)
+macro(robot_test_common NAME)
   add_library(${NAME} SHARED ${NAME}.cpp)
   target_link_libraries(${NAME} ${Boost_LIBRARIES} mc_rbdyn)
   set_target_properties(${NAME} PROPERTIES
@@ -9,22 +9,22 @@ macro(ROBOT_TEST_COMMON NAME)
   set(TEST_ROBOT_NAME ${NAME})
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/${NAME}/mc_rtc-${NAME}.conf)
   # Adding a project configuration file (for MSVC only)
-  GENERATE_MSVC_DOT_USER_FILE(${NAME})
+  generate_msvc_dot_user_file(${NAME})
 endmacro()
 
-macro(ROBOT_TEST_CONSTRUCTION_FAILURE NAME)
-  ROBOT_TEST_COMMON(${NAME})
+macro(robot_test_construction_failure NAME)
+  robot_test_common(${NAME})
   add_test(NAME ${NAME} COMMAND test_controller_ticker --run_test=CONSTRUCTION_FAILURE ${NAME}/mc_rtc-${NAME}.conf)
 endmacro()
 
-ROBOT_TEST_CONSTRUCTION_FAILURE(NotARobot)
-ROBOT_TEST_CONSTRUCTION_FAILURE(NoDestroyRobot)
-ROBOT_TEST_CONSTRUCTION_FAILURE(NoCreateRobot)
+robot_test_construction_failure(NotARobot)
+robot_test_construction_failure(NoDestroyRobot)
+robot_test_construction_failure(NoCreateRobot)
 # To run properly this test requires controller creation sandboxing
 # which is only enabled on Linux
 if(UNIX AND NOT APPLE)
-  ROBOT_TEST_CONSTRUCTION_FAILURE(UnresolvedSymbolRobot)
-  ROBOT_TEST_CONSTRUCTION_FAILURE(SegfaultRobot)
-  ROBOT_TEST_CONSTRUCTION_FAILURE(FPERobot)
+  robot_test_construction_failure(UnresolvedSymbolRobot)
+  robot_test_construction_failure(SegfaultRobot)
+  robot_test_construction_failure(FPERobot)
 endif()
-ROBOT_TEST_CONSTRUCTION_FAILURE(ThrowingRobot)
+robot_test_construction_failure(ThrowingRobot)
