Add a rule to generated flatbuffer files if flatc is available

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -151,6 +151,7 @@ include_directories(3rd-party/RapidJSON)
 
 add_subdirectory(3rd-party)
 add_subdirectory(doc)
+add_subdirectory(idl)
 add_subdirectory(src)
 if(NOT ${DISABLE_TESTS})
   add_subdirectory(tests)
