--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -122,6 +122,7 @@ if(${ROSCPP_FOUND})
   add_required_dependency(nav_msgs)
   add_required_dependency(sensor_msgs)
   add_required_dependency(tf2_ros)
+  add_required_dependency(rosbag)
 else()
   set(DEFINE_HAS_ROS_MACRO "")
 endif()
