--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,8 +93,8 @@ macro(find_description_package desc_pkg)
     else()
       message(WARNING "${DESC_PKG}_PATH is not defined and pkg-config failed to find ${desc_pkg}, the related robots' modules will not work properly. Check your system configuration or define ${DESC_PKG} to fix this issue.")
     endif()
-  endif()
-  if(DEFINED ${DESC_PKG}_PATH)
+  else()
+    set(${DESC_PKG}_FOUND True)
     message(STATUS "Found ${desc_pkg}: ${${DESC_PKG}_PATH}")
   endif()
 endmacro()
@@ -111,13 +111,6 @@ if(${ROSCPP_FOUND})
   add_required_dependency(tf2_ros)
 else()
   set(DEFINE_HAS_ROS_MACRO "")
-endif()
-
-option(CHOOSE_HRP4 "Use HRP4 as main robot instead of HRP2DRC" False)
-if(CHOOSE_HRP4)
-  set(DEFINE_CHOOSE_HRP4 "#define CHOOSE_HRP4 1")
-else()
-  set(DEFINE_CHOOSE_HRP4 "")
 endif()
 
 set(MC_ROBOTS_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX}/lib/mc_robots)
