--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -66,7 +66,7 @@ set(mc_rbdyn_HDR
 
 add_library(mc_rbdyn SHARED ${mc_rbdyn_SRC} ${mc_rbdyn_HDR})
 set_target_properties(mc_rbdyn PROPERTIES COMPILE_FLAGS "-DMC_RBDYN_EXPORTS")
-pkg_config_use_dependency(mc_rbdyn mc_rbdyn_urdf_cpp)
+pkg_config_use_dependency(mc_rbdyn mc_rbdyn_urdf)
 pkg_config_use_dependency(mc_rbdyn Tasks)
 target_link_libraries(mc_rbdyn ${Boost_LIBRARIES} ${GEOS_LIBRARY} mc_rtc_loader mc_rtc_utils)
 if(NOT WIN32)
@@ -167,7 +167,7 @@ add_library(mc_tasks SHARED ${mc_tasks_SRC} ${mc_tasks_HDR})
 set_target_properties(mc_tasks PROPERTIES COMPILE_FLAGS "-DMC_TASKS_EXPORTS")
 target_link_libraries(mc_tasks mc_solver mc_rbdyn mc_trajectory)
 target_link_libraries(mc_tasks ${Boost_LIBRARIES})
-pkg_config_use_dependency(mc_tasks mc_rbdyn_urdf_cpp)
+pkg_config_use_dependency(mc_tasks mc_rbdyn_urdf)
 pkg_config_use_dependency(mc_tasks Tasks)
 pkg_config_append_libs(mc_tasks)
 
@@ -211,7 +211,7 @@ if(${HRPSYS_BASE_FOUND})
   target_link_libraries(mc_control hrpIo)
 endif()
 target_link_libraries(mc_control ${Boost_LIBRARIES})
-pkg_config_use_dependency(mc_control mc_rbdyn_urdf_cpp)
+pkg_config_use_dependency(mc_control mc_rbdyn_urdf)
 pkg_config_use_dependency(mc_control Tasks)
 pkg_config_append_libs(mc_control)
 
