--- a/src/mc_control/python/CMakeLists.txt
+++ b/src/mc_control/python/CMakeLists.txt
@@ -8,4 +8,4 @@ include_directories(${PYTHON_INCLUDE_DIRS})
 add_controller("python" "python_controller.h" "python_controller.cpp")
 target_link_libraries(python ${PYTHON_LIBRARIES})
 
-ADD_DEPENDENCIES(python mc_rtc-python-bindings)
+add_dependencies(python mc_rtc-python-bindings)
