--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,7 +24,7 @@ build_debian:
     - export APT_DEPENDENCIES="cython python-pip python-numpy python-nose libtinyxml2-dev libboost-all-dev libjsoncpp-dev libgeos++-dev libgeos-dev qhull-bin libqhull-dev libltdl-dev"
     - export GIT_DEPENDENCIES="jrl-umi3218/Eigen3ToPython jrl-umi3218/SpaceVecAlg jrl-umi3218/eigen-qld git@gite.lirmm.fr:multi-contact/eigen-lssol.git jrl-umi3218/sch-core jrl-umi3218/sch-core-python jrl-umi3218/RBDyn jrl-umi3218/Tasks git@gite.lirmm.fr:multi-contact/mc_rbdyn_urdf_cpp#topic/Release"
     - export MASTER_PPA=""
-    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#karim_drc git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
+    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_rtc_ros_data git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
     - mkdir -p /tmp/_ci/catkin_dep_ws/src
     - ./.jrl-ci/run before_install
     - ./.jrl-ci/run build
@@ -38,10 +38,10 @@ build_gcc_noros:
     - export ROS_DISTRO=""
     - ./.jrl-ci/run before_install
     - pushd .
-    - cd /tmp && git clone -b karim_drc --recursive git@gite.lirmm.fr:multi-contact/mc_ros
+    - cd /tmp && git clone -b karim_drc --recursive git@gite.lirmm.fr:multi-contact/mc_rtc_ros_data
     - cd /tmp && git clone -b master --recursive git@gite.lirmm.fr:mc-hrp2/hrp2_drc
     - cd /tmp && git clone -b master --recursive git@gite.lirmm.fr:mc-hrp4/hrp4
-    - export CMAKE_ADDITIONAL_OPTIONS="-DHRP2_DRC_DESCRIPTION_PATH=/tmp/hrp2_drc/hrp2_drc_description -DHRP4_DESCRIPTION_PATH=/tmp/hrp4/hrp4_description -DMC_ENV_DESCRIPTION_PATH=/tmp/mc_ros/mc_env_description ${CMAKE_ADDITIONAL_OPTIONS}"
+    - export CMAKE_ADDITIONAL_OPTIONS="-DHRP2_DRC_DESCRIPTION_PATH=/tmp/hrp2_drc/hrp2_drc_description -DHRP4_DESCRIPTION_PATH=/tmp/hrp4/hrp4_description -DMC_ENV_DESCRIPTION_PATH=/tmp/mc_rtc_ros_data/mc_env_description ${CMAKE_ADDITIONAL_OPTIONS}"
     - popd
     - ./.jrl-ci/run build
     - ./.jrl-ci/run after_success
@@ -56,7 +56,7 @@ build_gcc_ros:
     - export MASTER_PPA=""
     - export APT_DEPENDENCIES="ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller"
     - export GIT_DEPENDENCIES=""
-    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#karim_drc git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
+    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_rtc_ros_data git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
     - ./.jrl-ci/run before_install
     - ./.jrl-ci/run build
     - ./.jrl-ci/run after_success
@@ -71,7 +71,7 @@ build_clang_ros:
     - export MASTER_PPA=""
     - export APT_DEPENDENCIES="ros-indigo-common-msgs ros-indigo-tf2-ros ros-indigo-xacro ros-indigo-rviz-animated-view-controller"
     - export GIT_DEPENDENCIES=""
-    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_ros#karim_drc git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
+    - export ROS_GIT_DEPENDENCIES="git@gite.lirmm.fr:multi-contact/mc_rtc_ros_data git@gite.lirmm.fr:mc-hrp2/hrp2_drc#master git@gite.lirmm.fr:mc-hrp4/hrp4#master"
     - ./.jrl-ci/run before_install
     - ./.jrl-ci/run build
     - ./.jrl-ci/run after_success
