--- a/tests/controllers/CMakeLists.txt
+++ b/tests/controllers/CMakeLists.txt
@@ -78,4 +78,5 @@ if(${PYTHON_BINDING})
   set(TEST_CONTROLLER_NAME "PythonController#test_python.TestPythonController")
   configure_file(${CMAKE_CURRENT_SOURCE_DIR}/mc_rtc.conf.in ${CMAKE_CURRENT_BINARY_DIR}/TestPythonController/mc_rtc-TestPythonController.conf)
   add_test(NAME "TestPythonController" COMMAND test_controller_ticker --run_test=RUN TestPythonController/mc_rtc-TestPythonController.conf 400 "" "${CMAKE_CURRENT_SOURCE_DIR}/test_python")
+  add_test(TestPythonControllerLog ${CMAKE_CURRENT_SOURCE_DIR}/check_log.py "${TEST_CONTROLLER_NAME}" 400)
 endif()
