--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,8 @@ option(PYTHON_BINDING_USER_INSTALL "Install the Python bindings in user space" O
 
 option(BUILD_CONTROLLER_SAMPLES "Build sample controllers in the project" ON)
 option(DISABLE_TESTS "Disable unit tests" OFF)
+option(DISABLE_CONTROLLER_TESTS "Disable controller unit tests" OFF)
+option(DISABLE_ROBOT_TESTS "Disable RobotModule unit tests" OFF)
 
 SEARCH_FOR_EIGEN()
 
