Allow to load a RobotModule from a simpler json object
If mb is not part of the json object, the load function will attempt to
load the URDF. Some entries can also be ommited.

[skip CI] test not passing

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,6 +34,7 @@ mc_rbdyn/polygon_utils.cpp
 mc_rbdyn/RobotLoader.cpp
 mc_rbdyn/Collision.cpp
 mc_rbdyn/ForceSensor.cpp
+mc_rbdyn/RobotModule.cpp
 )
 set(mc_rbdyn_SRC ${mc_rbdyn_SRC} PARENT_SCOPE)
 
