Use a more generic approach of MetaTaskLoader
The plan is to re-use this structure for a ConstraintSetLoader

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -106,6 +106,8 @@ set(mc_solver_HDR
 ../include/mc_solver/DynamicsConstraint.h
 ../include/mc_solver/KinematicsConstraint.h
 ../include/mc_solver/QPSolver.h
+../include/mc_solver/GenericLoader.h
+../include/mc_solver/GenericLoader.hpp
 )
 set(mc_solver_HDR ${mc_solver_HDR} PARENT_SCOPE)
 
@@ -146,7 +148,6 @@ mc_tasks/TrajectoryTask.cpp
 mc_tasks/ComplianceTask.cpp
 mc_tasks/GazeTask.cpp
 mc_tasks/PositionBasedVisServoTask.cpp
-mc_tasks/MetaTaskLoader.cpp
 )
 set(mc_tasks_SRC ${mc_tasks_SRC} PARENT_SCOPE)
 
@@ -157,7 +158,6 @@ set(mc_tasks_HDR
 ../include/mc_tasks/EndEffectorTask.h
 ../include/mc_tasks/MetaTask.h
 ../include/mc_tasks/MetaTaskLoader.h
-../include/mc_tasks/MetaTaskLoader.hpp
 ../include/mc_tasks/MoveContactTask.h
 ../include/mc_tasks/OrientationTask.h
 ../include/mc_tasks/VectorOrientationTask.h
