Load robot from the build directory

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -21,6 +21,10 @@ MACRO(mc_rtc_test NAME)
   generate_msvc_dot_user_file(${NAME})
 ENDMACRO()
 
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/tests_config.h.in
+               ${CMAKE_CURRENT_BINARY_DIR}/include/tests_config.h)
+include_directories(${CMAKE_CURRENT_BINARY_DIR}/include)
+
 mc_rtc_test(testConfiguration mc_rtc_utils)
 mc_rtc_test(testSolverTaskStorage mc_tasks)
 
