--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -163,6 +163,7 @@ mc_tasks/TrajectoryTask.cpp
 mc_tasks/ComplianceTask.cpp
 mc_tasks/GazeTask.cpp
 mc_tasks/PositionBasedVisServoTask.cpp
+mc_tasks/PostureTask.cpp
 )
 set(mc_tasks_SRC ${mc_tasks_SRC} PARENT_SCOPE)
 
@@ -187,6 +188,7 @@ set(mc_tasks_HDR
 ../include/mc_tasks/ComplianceTask.h
 ../include/mc_tasks/GazeTask.h
 ../include/mc_tasks/PositionBasedVisServoTask.h
+../include/mc_tasks/PostureTask.h
 )
 set(mc_tasks_HDR ${mc_tasks_HDR} PARENT_SCOPE)
 
