Skeleton for Universal FSM controller

--- a/src/mc_control/python/CMakeLists.txt
+++ b/src/mc_control/python/CMakeLists.txt
@@ -5,7 +5,7 @@ include_directories(../../../binding/python)
 FINDPYTHON()
 include_directories(${PYTHON_INCLUDE_DIRS})
 
-add_controller("python" "python_controller.h" "python_controller.cpp")
+add_controller("python" "python_controller.cpp" "python_controller.h")
 target_link_libraries(python ${PYTHON_LIBRARIES})
 
 add_dependencies(python mc_rtc-python-bindings)
