Introduce mc_control::CompletionCriteria

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,25 @@
+find_package(Boost REQUIRED COMPONENTS unit_test_framework timer)
+include_directories(${Boost_INCLUDE_DIRS})
+add_definitions(-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)
+if(WIN32)
+  add_definitions( -DBOOST_ALL_DYN_LINK )
+endif()
+
 configure_file("${CMAKE_CURRENT_SOURCE_DIR}/tests_config.h.cmake.in"
                "${CMAKE_CURRENT_BINARY_DIR}/tests_config.h")
 include_directories("${CMAKE_CURRENT_BINARY_DIR}")
 
+############################
+# -- Compile-time tests -- #
+############################
+
 add_executable(LoggerTraits LoggerTraits.cpp)
 target_link_libraries(LoggerTraits mc_control)
+
+#################################
+#      -- Utility tests --      #
+# -- FIXME not actuals tests -- #
+#################################
 
 add_executable(testBSplineTrajectory testBSplineTrajectory.cpp)
 target_link_libraries(testBSplineTrajectory mc_trajectory)
@@ -13,12 +29,9 @@ pkg_config_use_dependency(testQuadraticGenerator Tasks)
 pkg_config_use_dependency(testQuadraticGenerator mc_rbdyn_urdf)
 target_link_libraries(testQuadraticGenerator mc_rbdyn)
 
-find_package(Boost REQUIRED COMPONENTS unit_test_framework timer)
-include_directories(${Boost_INCLUDE_DIRS})
-add_definitions(-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)
-if(WIN32)
-  add_definitions( -DBOOST_ALL_DYN_LINK )
-endif()
+#################################
+# -- Framework utility tests -- #
+#################################
 
 MACRO(mc_rtc_test NAME)
   add_executable(${NAME} ${NAME}.cpp)
@@ -37,6 +50,17 @@ mc_rtc_test(testJsonIO mc_rtc_utils mc_rbdyn)
 mc_rtc_test(testConstraintSetLoader mc_solver)
 mc_rtc_test(testMetaTaskLoader mc_tasks)
 mc_rtc_test(testSolverTaskStorage mc_tasks)
+
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/testCompletionCriteria.in.cpp
+  ${CMAKE_CURRENT_BINARY_DIR}/testCompletionCriteria.cpp)
+add_executable(testCompletionCriteria ${CMAKE_CURRENT_BINARY_DIR}/testCompletionCriteria.cpp)
+target_link_libraries(testCompletionCriteria ${Boost_LIBRARIES} mc_control)
+add_test(testCompletionCriteria testCompletionCriteria)
+generate_msvc_dot_user_file(testCompletionCriteria)
+
+######################################
+# -- Controllers and robots tests -- #
+######################################
 
 add_executable(test_controller_ticker test_controller_ticker.cpp)
 pkg_config_use_dependency(test_controller_ticker mc_rbdyn_urdf)
