--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -220,6 +220,7 @@ mc_control/mc_python_controller.cpp
 mc_control/mc_global_controller.cpp
 mc_control/mc_global_controller_configuration.cpp
 mc_control/mc_global_controller_services.cpp
+mc_control/mc_completion_criteria.cpp
 )
 set(mc_control_SRC ${mc_control_SRC} PARENT_SCOPE)
 
@@ -233,6 +234,7 @@ set(mc_control_HDR
 ../include/mc_control/mc_python_controller.h
 ../include/mc_control/SimulationContactSensor.h
 ../include/mc_control/mc_global_controller.h
+../include/mc_control/mc_completion_criteria.h
 )
 set(mc_control_HDR ${mc_control_HDR} PARENT_SCOPE)
 
