Introduce mc_control::CompletionCriteria

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -65,6 +65,17 @@ mc_rtc_test(testSimulationContactPair mc_control)
 # -- Controllers and robots tests -- #
 ######################################
 
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/testCompletionCriteria.in.cpp
+  ${CMAKE_CURRENT_BINARY_DIR}/testCompletionCriteria.cpp)
+add_executable(testCompletionCriteria ${CMAKE_CURRENT_BINARY_DIR}/testCompletionCriteria.cpp)
+target_link_libraries(testCompletionCriteria ${Boost_LIBRARIES} mc_control)
+add_test(testCompletionCriteria testCompletionCriteria)
+generate_msvc_dot_user_file(testCompletionCriteria)
+
+###########################
+# -- FSM related tests -- #
+###########################
+
 add_subdirectory(fsm_states)
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/testFSMStateFactory.in.cpp
@@ -75,6 +86,10 @@ target_link_libraries(testFSMStateFactory ${Boost_LIBRARIES} fsm)
 target_link_libraries(testFSMStateFactory ConfigureState)
 add_test(testFSMStateFactory testFSMStateFactory)
 generate_msvc_dot_user_file(testFSMStateFactory)
+
+######################################
+# -- Controllers and robots tests -- #
+######################################
 
 add_executable(test_controller_ticker test_controller_ticker.cpp)
 pkg_config_use_dependency(test_controller_ticker mc_rbdyn_urdf)
